# Tgemm

./: .gitignore  CMakeLists.txt  README.md  common.cuh
cgemm/: CMakeLists.txt  main.cc
cgemm/kernels/: v1.h
hgemm/: CMakeLists.txt
hgemm/kernels/: v1.h
playground/: a.out  play.cc  run
sgemm/: CMakeLists.txt  main.cu
sgemm/kernels/: v0.cuh  v1.h  v2.h  v3.h
